Spacing fixes

--- a/src/components/current_user/current_user.scss
+++ b/src/components/current_user/current_user.scss
@@ -7,7 +7,6 @@
     }
 
     .username {
-        padding-left: 10px;
         font-weight: 900;
         flex-grow: 1;
         text-align: right;
