--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,5 +1,5 @@
 .Sidebar-holder {
-    width: 300px;
+    width: 350px;
     .Sidebar {
         height: 100%;
         display: flex;
@@ -13,7 +13,7 @@
                 margin-top: 20px;
                 text-align: center;
                 .Sidebar-title {
-                    font-size: 3em;
+                    font-size: 2.5em;
                     margin: 0;
                 }
 
